Update lombok version pom.xml